# ACP-E2EE

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
include/: acp.h
interop/: AcpInterop.cs
src/: api.rs  error.rs  frame.rs  handshake.rs  lib.rs  ratchet.rs  session.rs
tests/: roundtrip.rs  rust_api.rs
