[package]
name = "acp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake3 = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
